// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-dkXsAU DrLav"
  >
    <a
      class="sc-bdDsCe jFRUnW"
      data-discover="true"
      href="/some/path"
    >
      <div
        class="sc-hKVpXn dqPxMr"
      >
        <img />
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-dkXsAU DrLav"
  >
    <div
      class="sc-gtcBCx boJCWs"
    >
      <div
        class="sc-hKVpXn dqPxMr"
      >
        <img />
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-dkXsAU DrLav"
  >
    <div
      class="sc-gtcBCx boJCWs"
    >
      <div
        class="sc-hKVpXn dqPxMr"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
